2012-11-07  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: derive depends from package LinkingTo
        * src/Attributes.cpp: validate exported C++ functions before calling;
        use static rather than inline for stubs to avoid call-site bloat;
        improved error message when package hpp already exists; import Rcpp
        namespace into package shim namespace
        * src/AttributesParser.h: add signature and isHidden methods
        * src/AttributesParser.cpp: add signature and isHidden methods
        * src/exceptions.cpp: add function_not_exported exception
        * include/Rcpp/exceptions.h: add function_not_exported exception

2012-11-07  Romain Francois <romain@r-enthusiasts.com>

        * src/Language.cpp: Language gains a fast_eval method, without the whole try/catch
        * src/barrier.cpp: function char_nocheck to avoid the check in using CHAR
        * include/Rcpp/sugar/functions/unique.h: sugar unique and sort_unique
        using unordered_set (perhaps we could use it from c++11). 

2012-11-06  JJ Allaire <jj@rstudio.org>

        * R/Attributes.R: tweak whitespace in verbose mode
        * src/AttributesParser.h: support for interfaces attribute
        * src/AttributesParser.cpp: support for interfaces attribute
        * src/Attributes.cpp: support for interfaces attribute; refactor 
        code generators; use single module for exports; return list of
        updated files from compileAttributes
        * src/Module.cpp: add package parameter to GetCppCallable
        * include/Rcpp/Module.h: add package parameter to GetCppCallable
        * man/compileAttributes.Rd: documentation updates

2012-11-05  Romain Francois <romain@r-enthusiasts.com>

        * include/Rcpp/Module.h: added class CppInheritedProperty to handle 
        inherited properties
        * include/Rcpp/module/class.h: implemented inheritance of properties

2012-11-05  JJ Allaire <jj@rstudio.org>
